fixed footer logo aspect ratio on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -582,6 +582,7 @@ p#women-name{
 
 .footer .left .logo {
     max-height: 5em;
+    width: 5em;
 }
 
 .footer .left p {
@@ -619,9 +620,8 @@ p#women-name{
         margin-bottom: 0;
     }
 
-    .footer .left img {
-        max-width: 100%;
-        height: 3em;
+    .footer .left .logo {
+        width: 3em;
     }
 
     .footer .left p {
